@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2004/03/11 17:27:29 jmmv Exp $
+# $NetBSD: Makefile,v 1.23 2004/03/14 00:45:34 markd Exp $
 
 DISTNAME=	kde-3.2.1
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	meta-pkgs x11 kde
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -16,7 +16,7 @@ DEPENDS+=	kdeaddons-3.2.1:../../misc/kdeaddons3
 DEPENDS+=	kdeadmin-3.2.1:../../misc/kdeadmin3
 DEPENDS+=	kdeedu-3.2.1:../../misc/kdeedu3
 DEPENDS+=	kdegames-3.2.1:../../games/kdegames3
-DEPENDS+=	kdegraphics-3.2.1:../../graphics/kdegraphics3
+DEPENDS+=	kdegraphics-3.2.1nb1:../../graphics/kdegraphics3
 DEPENDS+=	kdemultimedia-3.2.1nb1:../../multimedia/kdemultimedia3
 DEPENDS+=	kdenetwork-3.2.1:../../net/kdenetwork3
 DEPENDS+=	kdepim-3.2.1:../../misc/kdepim3
