@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5253 2004/03/13 17:21:07 kristerw Exp $
+$NetBSD: CHANGES,v 1.5254 2004/03/14 00:49:10 markd Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1464,3 +1464,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated libxslt to 1.1.4 [jmmv 2004-03-13]
 	Updated oo2c to 2.0.11nb2 [kristerw 2004-03-13]
 	Updated swi-prolog to 5.0.10nb2 [kristerw 2004-03-13]
+	Updated kdegraphics3 to 3.2.1nb1 [markd 2004-03-14]
+	Updated kde3 to 3.2.1nb2 [markd 2004-03-14]
